--- a/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/src/test/resources/bootstrap.yml
@@ -1,13 +1,17 @@
-
 #微服务配置
 spring:
   application:
-    name: content-service
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/xuecheng?serverTimezone=UTC&userUnicode=true&useSSL=false&
-    username: root
-    password: 123456
+    name: content-service   # 服务名
+  cloud:
+    nacos:
+      server-addr: 10.226.163.158:8848
+      config:     # 配置文件相关信息
+        namespace: dev
+        group: xuecheng-plus-project
+        file-extension: yaml
+        refresh-enabled: true
+  profiles:
+    active: dev
 # 日志文件配置路径
 logging:
   config: classpath:log4j2-dev.xml
